# difflayers

./: README.md
hopfield-layers/: .gitignore  DAHN_PRD_TRD.md  README.md  dahn_diagnosis.html  main.py  output.html  pyproject.toml  setup.py
hopfield-layers/.noteweave/chats/: _index.json  ext_1779794948178.json  ext_1779808800271.json
hopfield-layers/bench-p04-pcam/: mem_bandwidth_analysis.py
hopfield-layers/bench-p04-pcam/adapters/: myteam.py
hopfield-layers/converter/: app.py  requirements.txt
hopfield-layers/converter/static/: index.html
hopfield-layers/difflayers/: __init__.py  attention_operator.py  chgr.py  diffused_attention.py  diffusion.py  dynamics_engine.py  gpah.py  tshh.py
hopfield-layers/difflayers/graph/: __init__.py  build_graph.py  faiss_builder.py  laplacian.py  laplacian_builder.py
hopfield-layers/examples/bit_pattern/: bit_pattern_demo.ipynb
hopfield-layers/examples/latch_sequence/: latch_sequence_demo.ipynb
hopfield-layers/examples/mnist_bags/: mnist_bags_demo.ipynb
hopfield-layers/hflayers/: __init__.py  diffused_attention.py  dynamics_engine.py  functional.py
hopfield-layers/hflayers/auxiliary/: data.py
hopfield-layers/hflayers/graph/: builder.py
hopfield-layers/src/experiments/: ablation.py  arch_comparison.py  attention_analysis.py  benchmark.py  energy_gap_sweep.py  logit_vs_feature.py  mode_comparison.py  noise_robustness.py  (+2 more)
hopfield-layers/tests/: test_attention_operator.py  test_diffusion_ops.py  test_dynamics_engine.py  test_dynamics_wiring.py  test_energy_tracker.py  test_engine_cache.py  test_graph_builder.py
(+15 files in other folders)
